2007-10-04  Philip Van Hoof  <pvanhoof@gnome.org>

	- -Wall warnings
	- -pedantic warnings
	- TnyCamelSendQueue should not error if the TnyDevice went offline
	- Bugfixes in TnyGtkFolderStoreTreeModel

2007-10-03  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail/tny-merge-folder.c:
	(tny_merge_folder_get_id): fixed id generation. We
	were setting this with a fixed value always due to
	an error in initialisation. Now we calculate an
	id with the merged folder id's and their account
	id's.
	(tny_merge_folder_get_url_string): created 
	implementation. Now it gets the merge folder id
	as part of the url string with this format:
	"merge://ID"

2007-09-28  Philip Van Hoof  <pvanhoof@gnome.org>

	* Unsigned integers can't be < 0

2007-09-26  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-common.c,
	(_foreach_email_add_to_inet_addr): now we don't use
	strtok_r() to split the string to addresses, as we
	weren't taking into account the quotes. I implemented
	a new _split_recipients() method that takes quotes
	into account.
	(_string_to_camel_inet_addr): now we remove the quotes
	in the name part of an address, as they are added by
	camel part automatically.

2007-09-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed (avoided) a memory leak in saving CamelObject's states
	* Sending messages, some fixes for the CC and BCC fields
	* Date-Received on maildir was foobar

2007-09-25  Mark Doffman <mark.doffman@codethink.co.uk>
	
	* /bindings/python/*: Remove the platform generation
	from the automatically generated bindings. 

	* /bindings/python/README: Update for changes to the way
	the python bindings are generated.
	
	* /tests/python-demo/*: Add implementations of a tny-list
	iterator, platform factory, and account store. Update the 
	svn ignore to ignore the compiled python files. 

	* /tests/python-demo/tinymail-python-test.py: Modify to use
	the python implementation of the platform factory.
	
2007-09-24  Philip Van Hoof  <pvanhoof@gnome.org>
